--- a/ParichayLite/package.json
+++ b/ParichayLite/package.json
@@ -6,6 +6,7 @@
     "gulp": "^3.8.11",
     "gulp-concat": "^2.5.2",
     "gulp-uglifycss": "^1.0.4",
-    "del": "^1.2.0"
+    "del": "^1.2.0",
+    "gulp-angular-templatecache": "^1.8.0"
   }
 }
