--- a/ParichayLite/project.json
+++ b/ParichayLite/project.json
@@ -11,6 +11,7 @@
     "Microsoft.AspNet.Hosting.Abstractions": "1.0.0-rc1-final",
     "Microsoft.AspNet.StaticFiles": "1.0.0-rc1-final",
     "Microsoft.AspNet.Mvc": "6.0.0-rc1-final",
+    "Microsoft.AspNet.Mvc.TagHelpers": "6.0.0-rc1-final",
     "Microsoft.AspNet.Identity": "3.0.0-rc1-final",
     "Microsoft.AspNet.Identity.EntityFramework": "3.0.0-rc1-final",
     "Microsoft.Framework.ConfigurationModel": "1.0.0-beta4",
@@ -43,7 +44,11 @@
   },
 
   "frameworks": {
-    "dnxcore50": { }
+    "dnxcore50": {
+      "dependencies": {
+        "System.Linq": "4.0.1-beta-23516"
+      }
+    }
   },
 
   "exclude": [
