--- a/ParichayLite.Domain/project.json
+++ b/ParichayLite.Domain/project.json
@@ -21,7 +21,8 @@
             "System.Reflection.TypeExtensions": "4.1.0-beta-23516",
             "System.Reflection.Extensions": "4.0.1-beta-23516",
             "System.Reflection.Primitives": "4.0.1-beta-23516",
-            "System.Reflection.Emit": "4.0.1-beta-23516",
+          "System.Reflection.Emit": "4.0.1-beta-23516",
+          "Newtonsoft.Json": "8.0.3",
           "System.Reflection.Emit.ILGeneration": "4.0.1-beta-23516",
           "Microsoft.AspNet.Identity": "3.0.0-rc1-final",
           "Microsoft.AspNet.Identity.EntityFramework": "3.0.0-rc1-final",
