--- a/ParichayLite/project.lock.json
+++ b/ParichayLite/project.lock.json
@@ -1888,6 +1888,7 @@
           "EntityFramework.Sqlite": "7.0.0-rc1-final",
           "Microsoft.AspNet.Identity": "3.0.0-rc1-final",
           "Microsoft.AspNet.Identity.EntityFramework": "3.0.0-rc1-final",
+          "Newtonsoft.Json": "8.0.3",
           "System.Collections": "4.0.11-beta-23516",
           "System.Collections.Specialized": "4.0.1-beta-23516",
           "System.ComponentModel.Annotations": "4.0.11-beta-23516",
@@ -4968,6 +4969,7 @@
           "EntityFramework.Sqlite": "7.0.0-rc1-final",
           "Microsoft.AspNet.Identity": "3.0.0-rc1-final",
           "Microsoft.AspNet.Identity.EntityFramework": "3.0.0-rc1-final",
+          "Newtonsoft.Json": "8.0.3",
           "System.Collections": "4.0.11-beta-23516",
           "System.Collections.Specialized": "4.0.1-beta-23516",
           "System.ComponentModel.Annotations": "4.0.11-beta-23516",
@@ -8385,6 +8387,7 @@
           "EntityFramework.Sqlite": "7.0.0-rc1-final",
           "Microsoft.AspNet.Identity": "3.0.0-rc1-final",
           "Microsoft.AspNet.Identity.EntityFramework": "3.0.0-rc1-final",
+          "Newtonsoft.Json": "8.0.3",
           "System.Collections": "4.0.11-beta-23516",
           "System.Collections.Specialized": "4.0.1-beta-23516",
           "System.ComponentModel.Annotations": "4.0.11-beta-23516",
